[@mantine/schedule] WeekView: Fix z-index of header + current timeline

--- a/packages/@mantine/schedule/src/WeekView/WeekView.module.css
+++ b/packages/@mantine/schedule/src/WeekView/WeekView.module.css
@@ -26,7 +26,7 @@
   border-start-end-radius: var(--week-view-radius);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 3;
   background-color: var(--mantine-color-body);
   border-bottom: 1px solid var(--mantine-color-gray-3);
   margin-bottom: -1px;
